# relai

./: .gitignore  README.md  pyproject.toml  setup.sh
tests/: conftest.py  run.sh  test_agent_core.py  test_ai_activity_progress.py  test_ai_half_resize_e2e.py  test_ai_history.py  test_ai_init_helpers.py  test_ai_inject_approval.py  test_ai_inject_settle.py  test_ai_local_tools.py  test_ai_model_command.py  test_ai_panel_edit.py  test_ai_panel_scroll.py  test_ai_panel_toggle.py  test_ai_paste.py  test_ai_paste_e2e.py  test_ai_perf_command.py  test_ai_sessions_integration.py  test_ai_steer.py  test_ai_tool_indicator.py  test_backend_model_manager.py  test_backend_rpc.py  test_backend_sessions.py  test_backend_startup.py  test_context_compaction.py  test_context_window_detect.py  test_copilot_gateway.py  test_get_past_snapshot.py  test_helper_src.py  test_inline_dsr.py  test_llm_conf.py  test_llm_error_detail.py  test_llm_setup.py  test_llm_usage.py  test_mcp.py  test_models_registry.py  test_neutral_context.py  test_protocol.py  test_responses_client.py  test_session_store.py  (+4 more)
tools/: keyprobe.py  proto_settle_detect.py  test_ai_half_resize_e2e.py  test_ai_helpers_autoinit.py  test_ai_history.py  test_ai_history_tool.py  test_ai_init_helpers.py  test_ai_inject_phrasing.py  test_ai_inject_settle.py  test_ai_inject_tool.py  test_ai_inline.py  test_ai_panel.py  test_ai_panel_edit.py  test_ai_panel_scroll.py  test_ai_panel_split.py  test_ai_paste.py  test_ai_paste_e2e.py  test_ai_sessions_integration.py  test_ai_summon_key.py  test_ai_toggle_restore_e2e.py  test_ai_tool_indicator.py  test_ai_tool_introspect.py  test_ai_vim_ctrlf.py  test_compaction_loop.py  test_context_compaction.py  test_context_window_detect.py  test_copilot_gateway.py  test_helper_src.py  test_inline_dsr.py  test_llm_conf.py  (+11 more)
(+39 files in other folders)
