[project]
name = "ludvart"
version = "0.0.1"
description = "PTY-level character-stream relay with an optional, human-in-control AI agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyte>=0.8.2",
    "openai>=1.40",
    "anthropic>=0.34",
    "google-genai>=1.0",
    "mcp>=1.0",
]

[project.scripts]
ludvart = "ludvart.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ludvart"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end test that forks a real ludvart process and requires a configured LLM provider (skipped automatically when none is configured)",
]
